--- a/src/app/componentes/categoriactv-list/categoriactv-list.component.html
+++ b/src/app/componentes/categoriactv-list/categoriactv-list.component.html
@@ -1,7 +1,5 @@
 <div class="col-md-4" *ngFor="let game of games">
-    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-      {{game.title}}
-        </div>
+    
     <div class="card-body">
       <p>{{game.description}}</p>
       <p>Created At {{game.created_at | date: 'yyyy-MM-dd'}}</p>
@@ -9,4 +7,25 @@
         EDIT GAME
       </a>
     </div>
+
+
+    <table class="table" *ngFor="let catavtivo of cateactivos">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+      <th scope="col">Opciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+  </tbody>
+</table>
  </div>
